--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -51,17 +51,16 @@ table {
 
 body {
     display: grid;
-    grid-template: 83% 27% / 20% 80%;
+    grid-template: 12% 85% 3% / 1fr 5fr 1fr;
 
-    background-color: rgb(39, 39, 39);
+    background-color: rgb(19, 18, 20);
     color: white;
 
-    height: 100vh;
+	height: 100vh;
 }
 
-
 section {
-    border: 1px solid black;
+    border: 1px solid rgb(255, 0, 0);
 }
 
 .hidden {
@@ -69,11 +68,63 @@ section {
 }
 
 
+
 .header {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 1/2;
-    height: 10%;
 }
 
+
+/* main related styles */
+.main {
+	grid-column: 1/4;
+    grid-row: 2/3;
+	display: grid;
+	grid-template: 1fr / 1fr 5fr;
+
+	background-color: rgb(37, 37, 37);
+
+	.folderMenu {
+		grid-column: 1/2;
+		background-color: rgb(26, 46, 26);
+
+		.folderCard{
+			border: 1px solid rgb(255, 0, 234);
+			height: 20%;
+		}
+	}
+	
+	.itemDisplay {
+		grid-column: 2/3;
+		background-color: rgb(0, 44, 44);
+
+		.itemCard{
+			border: 1px solid rgb(0, 255, 13);
+			height: 20%;
+			width: 20%;
+
+
+			h1{
+				font-size: 2em;
+			}
+
+			p {
+				font-size: 1em;
+			}
+
+			p2 {
+				font-size: 0.7em;
+			}
+		}
+
+	}
+}
+
+
+
+.footer {
+	grid-column: 1/4;
+	grid-row: 3/4;
+}
 
 
