skeleton style for the activeFolder

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,6 +92,10 @@ section {
 			border: 1px solid rgb(255, 0, 234);
 			height: 20%;
 		}
+
+		.active {
+			background-color: rgb(77, 0, 70);
+		}
 	}
 	
 	.itemDisplay {
