--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -88,25 +88,24 @@ section {
 		grid-column: 1/2;
 		background-color: rgb(26, 46, 26);
 
-		.folderCard{
+		.folderDiv{
 			border: 1px solid rgb(255, 0, 234);
 			height: 20%;
 			display: flex;
-			flex-direction: column;
+			flex-direction: row;
+			justify-content: space-between;
+		}
+
+		.folderContent{
+			width: 100%;
 		}
 
 		.active {
 			background-color: rgb(77, 0, 70);
-		}
-
-		.folderDiv {
-			background-color: rgb(0, 255, 0);
-		}
+		}		
 
 		.delButtonFolder {
-
 			background-color: rgb(255, 0, 0);
-
 		}
 	}
 	
