--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Rubik&display=swap');
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -91,13 +90,14 @@ body {
 	grid-column: 1/4;
     grid-row: 2/3;
 	display: grid;
-	grid-template: 1fr / 1fr 5fr;
+	grid-template: 1fr / 1fr 7fr;
 	background-color: rgb(37, 37, 37);
 }
 
 
 
 .footer {
+	text-align: center;
 	grid-column: 1/4;
 	grid-row: 3/4;
 }
