--- a/src/styles/folder.scss
+++ b/src/styles/folder.scss
@@ -22,6 +22,7 @@ $black: #262626;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding: 0;
     padding-left: 5px;
     align-items: center;
     margin: 3px;
@@ -32,6 +33,7 @@ $black: #262626;
     height: 100%;
     width: 100%;
     justify-content: center;
+    padding: 1em 0;
 
     h1 {
       height: 100%;
@@ -48,7 +50,6 @@ $black: #262626;
   .active {
     transition: ease 100ms;
     background-color: rgb(77, 0, 70);
-    transform: scale(1.05);
   }
 
   .delFolderButton {
