--- a/src/styles/item.scss
+++ b/src/styles/item.scss
@@ -30,6 +30,8 @@ $black: #262626;
       background-color: #7e3164;
       transition: ease-in 250ms;
 
+      overflow: hidden;
+
       button{
         background-color: white;
         font-size: 2em;
@@ -41,6 +43,8 @@ $black: #262626;
       .delButtonDiv{
         margin-top: auto;
         justify-self: end;
+        position: absolute;
+        top: 325px;
       }
 
       h1 {
@@ -50,6 +54,7 @@ $black: #262626;
       p2 {
         font-size: 1em;
         justify-self: flex-start;
+        text-overflow: ellipsis;
       }
 
       p {
@@ -73,20 +78,48 @@ $black: #262626;
       h1 {
         user-select: none;
         display: inline;
-        position: inherit;
+        position: absolute;
         font-size: 7em;
+        padding-top: 60px;
       }
 
       .itemForm {
         transition:
-          visibility 0s,
-          opacity 0.3s linear;
+        visibility 0s,
+        opacity 0.3s linear;
         opacity: 0;
+        display: flex;
+        flex-direction: column;
+        margin: 1em;
+
 
         button{
+          display: block;
+          width: 1.5em;
+          height: 1.5em;
           margin: auto;
-          font-size: 1em;
+          margin-top: 10px;
+          font-size: 2em;
+          border-radius: 1em;
+
+          background-color:$purple;
+          color: #FFFFFF;
+
+          border: 2px solid #FFFFFF;
+
+          cursor: pointer;
         }
+
+        input, select{
+          margin-top: 5px;
+        }
+
+        button:focus{
+          transform: scale(0.9);
+          box-shadow: 3px 3px 4px rgb(0, 0, 0);
+        }
+
+        
       }
     }
     .formDiv:hover {
@@ -102,6 +135,11 @@ $black: #262626;
     }
     .itemCard:hover {
       transform: scale(1.02);
+      .delButtonDiv{
+        top: 200px;
+      }
+      
+      
     }
   }
 }
